<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_ab_search" android:id="@id/menu_search" android:title="@string/menu_search" android:showAsAction="ifRoom" />
    <item android:id="@id/menu_contacts_filter" android:title="@string/menu_contacts_filter" />
    <item android:id="@id/menu_import_export" android:title="@string/menu_import_export" />
    <item android:id="@id/menu_clear_frequents" android:title="@string/menu_clear_frequents" />
    <item android:id="@id/menu_accounts" android:title="@string/menu_accounts" />
    <item android:id="@id/menu_settings" android:title="@string/menu_settings" />
    <item android:id="@id/menu_help" android:title="@string/menu_help" />
    <item android:id="@id/export_database" android:visible="false" android:title="@string/menu_export_database" android:showAsAction="never" />
</menu>