<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menu_done" android:alphabeticShortcut="\n" android:showAsAction="always" />
    <item android:id="@id/menu_split" android:title="@string/menu_splitAggregate" />
    <item android:id="@id/menu_join" android:title="@string/menu_joinAggregate" />
    <item android:id="@id/menu_discard" android:title="@string/menu_discard" android:alphabeticShortcut="q" />
    <item android:id="@id/menu_delete" android:title="@string/menu_deleteContact" />
    <item android:id="@id/menu_set_ringtone" android:title="@string/menu_set_ring_tone" />
    <item android:id="@id/menu_send_to_voicemail" android:title="@string/menu_redirect_calls_to_vm" android:checkable="true" />
    <item android:id="@id/menu_help" android:title="@string/menu_help" />
</menu>